--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>data-injector</module>
         <module>kv-broker</module>
         <module>kv-server</module>
+        <module>kv-storage</module>
     </modules>
 
     <properties>
@@ -66,5 +67,42 @@
         </dependencies>
 
     </dependencyManagement>
+
+    <build>
+
+
+        <pluginManagement>
+
+            <plugins>
+
+                <!-- Note: configure surefire to run only unit tests -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <includes>
+                            <include>**/*Test.java</include>
+                        </includes>
+                    </configuration>
+                </plugin>
+
+                <!-- Note: configure failsafe to run only unit tests -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <includes>
+                            <include>**/*SpecificationIT.java</include>
+                        </includes>
+                    </configuration>
+                </plugin>
+
+            </plugins>
+
+        </pluginManagement>
+
+    </build>
 
 </project>
