added infra for kv-server and kv-broker connectivity, and passed-implemented basic connectivity for health check

--- a/data-injector/pom.xml
+++ b/data-injector/pom.xml
@@ -22,6 +22,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
         </dependency>
 
 
@@ -69,7 +71,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>chriniko.kv.datainjector.Bootstrap</mainClass>
+                            <mainClass>chriniko.kv.datainjector.BootstrapDataInjector</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
