--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>data-injector</module>
         <module>kv-broker</module>
         <module>kv-server</module>
-        <module>kv-storage</module>
+        <module>kv-protocol</module>
     </modules>
 
     <properties>
@@ -27,12 +27,6 @@
         <dependencies>
 
             <!-- Dev Dependencies -->
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.16</version>
-                <scope>provided</scope>
-            </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
             <dependency>
