--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
                 <version>3.12.0</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.javatuples/javatuples -->
+            <dependency>
+                <groupId>org.javatuples</groupId>
+                <artifactId>javatuples</artifactId>
+                <version>1.2</version>
+            </dependency>
+
+
 
 
             <!-- Test Dependencies -->
@@ -57,6 +65,29 @@
                 <version>5.7.0</version>
                 <scope>test</scope>
             </dependency>
+
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>2.23.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>3.6.28</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>4.0.3</version>
+                <scope>test</scope>
+            </dependency>
+
 
         </dependencies>
 
