--- a/kv-server/pom.xml
+++ b/kv-server/pom.xml
@@ -34,6 +34,11 @@
             <version>${version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+        </dependency>
+
     </dependencies>
 
 
