--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,13 @@
     <artifactId>m111_kv_christidis_nikolaos</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>data-injector</module>
         <module>kv-broker</module>
         <module>kv-server</module>
         <module>kv-protocol</module>
+        <module>kv-datatypes</module>
     </modules>
 
     <properties>
@@ -27,13 +29,6 @@
         <dependencies>
 
             <!-- Dev Dependencies -->
-
-            <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>2.12.2</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.github.javafaker</groupId>
