heavy changes on parsing

--- a/kv-broker/pom.xml
+++ b/kv-broker/pom.xml
@@ -109,6 +109,12 @@
             </plugin>
 
 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+
+
         </plugins>
     </build>
 
