--- a/data-injector/pom.xml
+++ b/data-injector/pom.xml
@@ -93,6 +93,11 @@
             </plugin>
 
 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+
         </plugins>
     </build>
 
