--- a/kv-server/pom.xml
+++ b/kv-server/pom.xml
@@ -82,6 +82,12 @@
             </plugin>
 
 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+
+
         </plugins>
     </build>
 
