--- a/data-injector/pom.xml
+++ b/data-injector/pom.xml
@@ -48,7 +48,10 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+        </dependency>
 
     </dependencies>
 
